--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,14 @@
 @import "reset.css";
 /*                                       INDEX.HTML START */
 body{
-    height: 100vh;
+    padding: 30px;
 }
 .header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15px;
+
 }
 .link-container{
 display: flex;
@@ -17,6 +19,7 @@ gap: 100%;
     text-decoration: none;
     color: rgb(172, 180,199);
     font-weight: bold;
+
 }
 
 .header a.selected{
@@ -28,11 +31,16 @@ gap: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height:90vh;
+    padding: 70px;
 }
 .hero-title-container{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
+
+
 
 .mem-button-container{
     display: flex;
@@ -58,6 +66,7 @@ gap: 100%;
     background-color: white;
     padding: 20px;
     width: 30%;
+    text-align: center;
 }
 
 .card-del-container{
